# AK_triage

./: .gitignore  filter_rules.example.json  filter_rules.json  pyproject.toml  triage_export_inbox.xlsx  triage_export_sent.xlsx
email_triage_bot/: __init__.py
src/email_triage_bot/: __main__.py  config.py  gm_batch_draft_gemini.py  gm_batch_draft_gemini_all.py  gm_draft_gemini.py  gm_export_excel.py  gm_list.py  logging_conf.py  profiles.py
src/email_triage_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/email_triage_bot/clients/gemini/: client.py
src/email_triage_bot/clients/gmail/: client.py  parser.py
src/email_triage_bot/core/: normalization.py  prompt_builder.py  thread_context.py
